--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -5,4 +5,9 @@ DB_USER=notroot
 DB_PASSWORD=helloworld
 DB_NAME=mvc_express
 JWT_SECRET=jwt_secret
-MYSQL_ATTR_SSL_CA="file_root"
+SMTP_HOST=in-v3.mailjet.com
+SMTP_PORT=465
+# Ici, il faut mettre la CLÉ API
+SMTP_USER=voir la quete sur l'envoi des emails pour savoir comment comment configurer mailjet
+# Ici, la CLÉ SECRÈTE
+SMTP_PASSWORD=voir la quete sur l'envoi des emails pour savoir comment comment configurer mailjet 
