--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "husky": "^7.0.0"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
+    "express": "^4.18.1",
     "nodemailer": "^6.8.0"
   }
 }
