--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
-    "nodemailer": "^6.8.0"
+    "nodemailer": "^6.8.0",
+    "react-select": "^5.4.0"
   }
 }
