--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -4,6 +4,7 @@ DB_HOST=localhost
 DB_USER=notroot
 DB_PASSWORD=helloworld
 DB_NAME=mvc_express
+MYSQL_ATTR_SSL_CA=votre ssl
 JWT_SECRET=jwt_secret
 SMTP_HOST=in-v3.mailjet.com
 SMTP_PORT=465
