product & category is ok

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.4.0",
+    "react-select": "^5.5.0",
     "template-fullstack": "file:.."
   },
   "devDependencies": {
